changed jvm settings